--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ body {
           border-top-right-radius: 15px;
         }
         > h2 {
+          z-index: 1;
           position: absolute;
           top: 0%;
           left: 0%;
